// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel calls navigation handlers when buttons are clicked 1`] = `
<div>
  <div
    class="flex w-full max-w-full min-w-0 flex-col items-center gap-3 overflow-hidden"
  >
    <div
      class="keen-slider w-full max-w-full min-w-0 overflow-hidden"
      data-testid="carousel-test-id"
      tabindex="0"
    >
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 1
          </div>
        </div>
      </div>
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex gap-6 pt-3 lg:pt-5"
    >
      <button
        aria-label="Попередній слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        type="button"
      >
        <svg
          class="rotate-180"
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
      <button
        aria-label="Наступний слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        type="button"
      >
        <svg
          class=""
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel disables next button when on last slide 1`] = `
<div>
  <div
    class="flex w-full max-w-full min-w-0 flex-col items-center gap-3 overflow-hidden"
  >
    <div
      class="keen-slider w-full max-w-full min-w-0 overflow-hidden"
      data-testid="carousel-test-id"
      tabindex="0"
    >
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 1
          </div>
        </div>
      </div>
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex gap-6 pt-3 lg:pt-5"
    >
      <button
        aria-label="Попередній слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        type="button"
      >
        <svg
          class="rotate-180"
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
      <button
        aria-label="Наступний слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        disabled=""
        type="button"
      >
        <svg
          class=""
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel disables previous button when on first slide 1`] = `
<div>
  <div
    class="flex w-full max-w-full min-w-0 flex-col items-center gap-3 overflow-hidden"
  >
    <div
      class="keen-slider w-full max-w-full min-w-0 overflow-hidden"
      data-testid="carousel-test-id"
      tabindex="0"
    >
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 1
          </div>
        </div>
      </div>
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex gap-6 pt-3 lg:pt-5"
    >
      <button
        aria-label="Попередній слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        disabled=""
        type="button"
      >
        <svg
          class="rotate-180"
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
      <button
        aria-label="Наступний слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        type="button"
      >
        <svg
          class=""
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel renders correctly and matches snapshot 1`] = `
<div>
  <div
    class="flex w-full max-w-full min-w-0 flex-col items-center gap-3 overflow-hidden"
  >
    <div
      class="keen-slider w-full max-w-full min-w-0 overflow-hidden"
      data-testid="carousel-test-id"
      tabindex="0"
    >
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 1
          </div>
        </div>
      </div>
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex gap-6 pt-3 lg:pt-5"
    >
      <button
        aria-label="Попередній слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        type="button"
      >
        <svg
          class="rotate-180"
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
      <button
        aria-label="Наступний слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        type="button"
      >
        <svg
          class=""
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel responds to ArrowLeft and ArrowRight keys 1`] = `
<div>
  <div
    class="flex w-full max-w-full min-w-0 flex-col items-center gap-3 overflow-hidden"
  >
    <div
      class="keen-slider w-full max-w-full min-w-0 overflow-hidden"
      data-testid="carousel-test-id"
      tabindex="0"
    >
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 1
          </div>
        </div>
      </div>
      <div
        class="keen-slider__slide max-w-full"
      >
        <div
          class="box-border h-full w-full max-w-full min-w-0"
        >
          <div>
            Slide 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex gap-6 pt-3 lg:pt-5"
    >
      <button
        aria-label="Попередній слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        type="button"
      >
        <svg
          class="rotate-180"
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
      <button
        aria-label="Наступний слайд"
        class="rounded-default cursor-pointer text-lg leading-none transition-colors disabled:cursor-default lg:text-xl border-green text-green active:border-btn-bg-click hover:bg-btn-bg-hover active:bg-btn-bg-click hover:border-btn-bg-hover flex h-10 w-21 items-center justify-center rounded-sm border-2 bg-transparent p-0 hover:text-white active:text-white sm:p-0 disabled:text-btn-text-disabled-secondary disabled:border-btn-text-disabled-secondary disabled:pointer-events-none"
        data-testid="button-test-id"
        type="button"
      >
        <svg
          class=""
          data-testid="arrow-test-id"
          fill="currentColor"
          height="16"
          viewBox="0 0 37 16"
          width="37"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
